--- a/Rayman2LevelSwitcher/Rayman2LevelSwitcher.csproj
+++ b/Rayman2LevelSwitcher/Rayman2LevelSwitcher.csproj
@@ -14,6 +14,8 @@
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -55,10 +57,28 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="RenameDialog.xaml.cs">
+    <Compile Include="Converters\IsValidIndexConverter.cs" />
+    <Compile Include="Helpers\WPF\BaseValueConverter.cs" />
+    <Compile Include="Helpers\WPF\BindingProxy.cs" />
+    <Compile Include="Helpers\WPF\Command\AsyncRelayCommand.cs" />
+    <Compile Include="Helpers\WPF\Command\BaseRelayCommand.cs" />
+    <Compile Include="Helpers\GlobalKeyboardHookEventArgs.cs" />
+    <Compile Include="Helpers\WPF\BaseViewModel.cs" />
+    <Compile Include="Helpers\WPF\Command\RelayCommand.cs" />
+    <Compile Include="Extensions\VisualExtensions.cs" />
+    <Compile Include="ViewModels\AppViewModel.cs" />
+    <Compile Include="ViewModels\Bookmarks\BookmarkItemViewModel.cs" />
+    <Compile Include="Helpers\WPF\CommonCommands.cs" />
+    <Compile Include="DataModels\Enums\Rayman2LevelType.cs" />
+    <Compile Include="ViewModels\Levels\Rayman2LevelViewModel.cs" />
+    <Compile Include="ViewModels\Levels\Rayman2LevelContainerViewModel.cs" />
+    <Compile Include="ViewModels\Bookmarks\BookmarksViewModel.cs" />
+    <Compile Include="ViewModels\GameManagerViewModel.cs" />
+    <Compile Include="Game\Rayman2Manager.cs" />
+    <Compile Include="Windows\RenameDialog.xaml.cs">
       <DependentUpon>RenameDialog.xaml</DependentUpon>
     </Compile>
-    <Page Include="MainWindow.xaml">
+    <Page Include="Windows\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -66,43 +86,44 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="GlobalKeyboard.cs" />
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="Helpers\GlobalKeyboardHook.cs" />
+    <Compile Include="Windows\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="RenameDialog.xaml">
+    <Page Include="Windows\RenameDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Memory.cs" />
+    <Compile Include="Helpers\Memory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Costura.Fody">
+      <Version>4.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="Fody">
+      <Version>5.1.1</Version>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="gong-wpf-dragdrop">
+      <Version>2.0.4</Version>
+    </PackageReference>
+    <PackageReference Include="PropertyChanged.Fody">
+      <Version>3.0.1</Version>
+    </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="FodyWeavers.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
