--- a/OpenSpaceToolbox/packages.config
+++ b/OpenSpaceToolbox/packages.config
@@ -4,5 +4,6 @@
   <package id="Fody" version="6.0.5" targetFramework="net452" developmentDependency="true" />
   <package id="gong-wpf-dragdrop" version="2.2.0" targetFramework="net452" />
   <package id="PropertyChanged.Fody" version="3.2.1" targetFramework="net452" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net452" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
 </packages>
