--- a/OpenSpaceToolbox/OpenSpaceToolbox.csproj
+++ b/OpenSpaceToolbox/OpenSpaceToolbox.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Converters\IsValidIndexConverter.cs" />
     <Compile Include="DataModels\GameItem.cs" />
     <Compile Include="DataModels\GameList.cs" />
+    <Compile Include="GameManager\EnumEngineMode.cs" />
     <Compile Include="GameManager\Games\Generic\GenericSpeedMonitorExtra.cs" />
     <Compile Include="GameManager\Games\Rayman2\Rayman2RespawnAnimRemover.cs" />
     <Compile Include="GameManager\Games\Rayman2\Rayman2MaxHpExtra.cs" />
